--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -45,7 +45,7 @@ The big protocol wikipedia.
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 ## Internet Control Message Protocol A.K.A ICMP
-###### *[#Layer-3] [#Portless]*
+<font size=2>*[#Layer-3] [#Portless]*</font><br><br>
 
 [ICMP](https://www.urbandictionary.com/define.php?term=Spell%20iCup), or **I**nternet **C**ontrol **M**essage **P**rotocol is a protocol used to send control messages relating to the Internet protocol (IP).
 
@@ -106,7 +106,7 @@ Code 0 can be sent from a waypoint, code 1 can be sent from a host.
 
 
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -174,7 +174,7 @@ There are multiple types of querys that the host can ask of the server to perfor
 Finally, the server will return a reponse to the client which it will use. Either the server gives the client the resolution IP or it will error, in case the server does resolve the address the Client will `keep that resolution in it's own DNS Cache` to make future resolution of that name instantaneous.
 
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -215,7 +215,7 @@ Do note that **LLMNR should be disabled** in your local link network through GPO
 + Answered both.
 ```
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -272,7 +272,7 @@ In cases where DHCP fails, Windows has a mechanism called APIPA (Adutomatic Priv
 ```
 
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -322,7 +322,7 @@ To falicitate those network functions NetBIOS seperates to 3 services:
 + Small amounts of data and other protocols.
 ```
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -361,7 +361,7 @@ The port checking is done by entering `telnet <IP> <PORT>`, if the screen is bla
 ```
 
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -429,7 +429,7 @@ First, the `PI` will initiate a `control connection` with the other endpoint on 
 > The FTP protocol acts as a ftp-specific terminal on the remote machine, giving the user the ability to input commands to affect the remote machine. The main goal of ftp is to manage remote data and extract it.
 
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 ## Trivial File Transfer Protocol A.K.A TFTP
@@ -496,7 +496,7 @@ This protocol too works on a `Client/Server` basis, note that some concepts and 
 > From then on it's like downloading a file. The `client will slice the file` into a series of blocks, and send them one by one on UDP to the new server port. After sending each block it will `wait for an acknowledgment` before sending the next block.
 
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -624,7 +624,7 @@ Let's break it down one by one, start with the most simple.
 + Typo, fixed.
 ```
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -668,7 +668,7 @@ SMTP is used to relay mail messages over the network from the local network's sm
 - (Is SMTP considered secure and safe to use?)
 ```
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -724,7 +724,7 @@ POP3 is the latest version of the protocol with POP 1 being the first, over the 
 > In the UPDATE state the server deletes every mail marked as deleted by the user, then it releases the access lock it has put in the AUTHENTICATION state and disconnects the TCP connection.
 
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -828,7 +828,7 @@ A message may be flagged as one of these:
   *  `\Draft`, The message in not complete.
 
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -882,7 +882,7 @@ At the end the client will send a command to close the connection and session an
 ```
 
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -917,7 +917,7 @@ So basically using these operations and with a MIB table on all devices a networ
 - (Is the protocol secure?)
 ```
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -937,7 +937,7 @@ NTP Servers on small networks will usually syncronize using stratum 1,2 or 3 ser
 - (What happens in in the domain when the computers arent syncronized?)
 ```
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -1141,7 +1141,7 @@ The whole process goes like this:
 - (Stratesd checking this protocol but you wrote W-A-Y too much information summaries it)
 ```
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -1156,7 +1156,7 @@ for information about HTTPS/2.0 refer to the [HTTP](#hypertext-transfer-protocol
 - (I wouldv'e included it as a subclause of HTTP)
 ```
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -1258,7 +1258,7 @@ Both AH and ESP are encapsulation protocols, an IPsec VPN may use one or both of
 > The peer will decrypt the message, and then check the digest against a digest it will generate on it's own to affirm integrity and authentication. But more over, a succeful decryption of the message in itself proves the authenticity of the sender.
 
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -1395,7 +1395,7 @@ This protocol rides ontop of the `SSH Transport Layer Protocol`. The protocol is
 - (Stratesd checking this protocol but you wrote too much information summaries it)
 ```
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -1532,7 +1532,7 @@ Obviously this is not the exact structure of an RDP packet, since the entire pac
 ```
 
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -1630,7 +1630,7 @@ Overall, the flow of a connection may look something like this:
 ```
 
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -1707,7 +1707,7 @@ These messages all follow the same format each with their own MessageID.
 > This operation allows a client to include opreations that are not already included in this protocol, like insalling transport layer security.
 
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -1784,7 +1784,7 @@ Using these formats in the messages the client and servers can communicate relia
 - (Are there any limitations or disadvantages using MODBUS?)
 ```
 
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -1883,4 +1883,4 @@ This bibliography was put together after writing the NTP section, so most of the
 
 
 ---------------------------------------------------------------------------------------------------------------------------------------------------
-###### [Back to top](#bigous-protocolous)
+[<font size=2>Back to top</font>](#bigous-protocolous)
