Final styling on the VS code

--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -115,25 +115,20 @@ Code 0 can be sent from a waypoint, code 1 can be sent from a host.
 
 The DNS protocol is used for "translating" between IP addresses and Domain Names, thus the name Domain Name System. The protocol itself operates at the 7th OSI level which is the application layer and operates on top of port `UDP/53`. DNS went under a lot of transformation over the years since it was first introduced at 1983, today it exists in many variants that each serve a different purpose or build on previous implementation of the protocol. Some of these are:
 
-> #### `DNS over TCP` (TCP/53)
->
-> Provides more stability, longer answers and re-use of long-lived connections between clients and servers.
+<font size=6>DNS over TCP (TCP/53)</font><br>
+Provides more stability, longer answers and re-use of long-lived connections between clients and servers.
 
-> #### `DNS over TLS` (TCP/853)
->
-> Provides encryption to the entire DNS session, requires a dedicated DoT server.
+<font size=6>DNS over TLS (TCP/853)</font><br>
+Provides encryption to the entire DNS session, requires a dedicated DoT server.
 
-> #### `DNS over HTTPS` (TCP/443)
->
-> Tunnels DNS over HTTPS.
+<font size=6>DNS over HTTPS` (TCP/443)</font><br>
+Tunnels DNS over HTTPS.
 
-> #### `DNS over QUIC` (UDP/853)
->
-> Uses the transport protocol QUIC to transport messages, provides a lot of benefits that TCP does with encryption and speed.
+<font size=6>DNS over QUIC` (UDP/853)</font><br>
+Uses the transport protocol QUIC to transport messages, provides a lot of benefits that TCP does with encryption and speed.
 
-> #### `DNS over Your Mother` (UDP/69)
->
-> Tunnels the requests thrugh your mom, however some responses may be lost in the way back due to the fact that your mom ate them.
+<font size=6>DNS over Your Mother` (UDP/69)</font><br>
+Tunnels the requests thrugh your mom, however some responses may be lost in the way back due to the fact that your mom ate them.
 
 ```diff
 - (I do not not think this is appropriate here there is a burn section!)
