New format for text block headlines

--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -115,19 +115,19 @@ Code 0 can be sent from a waypoint, code 1 can be sent from a host.
 
 The DNS protocol is used for "translating" between IP addresses and Domain Names, thus the name Domain Name System. The protocol itself operates at the 7th OSI level which is the application layer and operates on top of port `UDP/53`. DNS went under a lot of transformation over the years since it was first introduced at 1983, today it exists in many variants that each serve a different purpose or build on previous implementation of the protocol. Some of these are:
 
-<font size=6>DNS over TCP (TCP/53)</font><br>
+<font size=6>**DNS over TCP (TCP/53)**</font><br>
 Provides more stability, longer answers and re-use of long-lived connections between clients and servers.
 
-<font size=6>DNS over TLS (TCP/853)</font><br>
+<font size=6>**DNS over TLS (TCP/853)**</font><br>
 Provides encryption to the entire DNS session, requires a dedicated DoT server.
 
-<font size=6>DNS over HTTPS` (TCP/443)</font><br>
+<font size=6>**DNS over HTTPS (TCP/443)**</font><br>
 Tunnels DNS over HTTPS.
 
-<font size=6>DNS over QUIC` (UDP/853)</font><br>
+<font size=6>**DNS over QUIC (UDP/853)**</font><br>
 Uses the transport protocol QUIC to transport messages, provides a lot of benefits that TCP does with encryption and speed.
 
-<font size=6>DNS over Your Mother` (UDP/69)</font><br>
+<font size=6>**DNS over Your Mother (UDP/69)**</font><br>
 Tunnels the requests thrugh your mom, however some responses may be lost in the way back due to the fact that your mom ate them.
 
 ```diff
@@ -153,15 +153,15 @@ A `DNS Table` is a long list of **DNS records**, basically a list of the Domain 
 #### DNS Query Types
 There are multiple types of querys that the host can ask of the server to perform in order to resolve the address.
 
-> #### `Recursive Query`
+> <font size=4>**Recursive Query**</font>
 >
 > In a recursive query the DNS server tries to find the **authoratative** DNS server of the address (The DNS server containing the resolution), through a recursive process starting at the Root DNS server. The server *must* return a response, either the resolution or an error.
 
-> #### `Non-Recursive Query`
+> <font size=4>**Non-Recursive Query**</font>
 >
 > In this query either the DNS server has to have the dns resolution or it queries the authoratative server for that hostname (which it must be familiar with through an NS type record).
 
-> #### `Iterative Query`
+> <font size=4>**Iterative Query**</font>
 >
 > The iterative query will try to return the best answer from it's cache and if it cant it will redirect the client to the DNS Root Server or the Authoratative server for that resolution where the client will have to repeat the query.
 
@@ -189,15 +189,15 @@ LLMNR provides name resolution ability inside the LAN when dns is unavialable/un
 
 ### HOW DOES IT WORK
 
-> #### `LLMNR Query`
+> <font size=4>**LLMNR Query**</font>
 >
 > A host will look in it's LLMNR cache, if it doesn't find the address it will send an LLMNR Query for it with a specified type (Like DNS) to the Multicast address matching the underlying Layer 3 protocol.
 
-> #### `LLMNR Responders recieve the request`
+> <font size=4>**LLMNR Responders recieve the request**</font>
 >
 > Any host configured as an LLMNR responder in the local link gets the query and checks their LLMNR records, they return a response only if they are the **authorative responder** (true owner of the name) to the address queried. The response is sent as a **unicast to the query source address**. 
 
-> #### `Sending Host Processes The Response`
+> <font size=4>**Sending Host Processes The Response**</font>
 >
 > The host that send the query processes the response and adds the resolution to their LLMNR cache.
 
@@ -236,26 +236,26 @@ DHCP Servers offer up IP addresses based on a configured `DHCP Scope` on the DHC
 Machines on the subnet may also reserve addresses on the DHCP Server in order to always recieve the same address, the reservation is made using the MAC address.
 
 ### IP Assignment Process
-> #### `DHCPDISCOVER`
+> <font size=4>**DHCPDISCOVER**</font>
 > 
 > When a client detects that it has no IP (And DHCP is enabled) it will look for a DHCP server on the network using a broadcast message. The DHCPDISCOVER message MAY include options that suggest values for the network address and lease duration.
 
-> #### `DHCPOFFER`
+> <font size=4>**DHCPOFFER**</font>
 > 
 > Each DHCP Server that the message gets to may reespond with an available IP address to the client in DHCPOffer message.
 
-> #### `DHCPREQUEST` 
+> <font size=4>**DHCPREQUEST**</font>
 > 
 > The client can send a DHCPREQUEST message to a server in order to:
 > * Accept/Decline a DHCPOFFER, a client will accept one offer and deny all other.
 > * Request a extension to an existing lease.
 
-> #### `DHCPACK`
+> <font size=4>**DHCPACK**</font>
 > 
 > Server sends network configuration parameters, including committed network address.
 
 at the end, when a computer wants to disconnect from the network it can send.
-> #### `DHCPRELEASE`
+> <font size=4>**DHCPRELEASE**</font>
 > 
 > Client to server relinquishing network address and cancelling remaining lease.
 
