--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -286,7 +286,7 @@ NetBIOS lets application that rely on it to send messages over the **local area 
 
 To falicitate those network functions NetBIOS seperates to 3 services:
 
-> <font size=4>**NetBIOS Name Service**</font>
+> <font size=4>**NetBIOS Name Service**</font><br>
 > <font size=2>*[#UDP/137]*</font><br><br>
 > 
 > NetBIOS provides it's own type of network architechture where each computer is represented by a 16 byte `name`, 15 ASCII characters to represent the computer and the last as a bit-field that represents what type of services the machine provides. The name will then be registered to an ip address (Only IPv4), and will enable name resolution.
@@ -302,12 +302,12 @@ To falicitate those network functions NetBIOS seperates to 3 services:
 + Removed the problematic line.
 ```
 
-> <font size=4>**NetBIOS Session Service**</font>
+> <font size=4>**NetBIOS Session Service**</font><br>
 > <font size=2>*[\#TCP/139]*</font><br><br>
 > 
 > Applications using NetBIOS can establish a NetBIOS over TCP (NBT) session with a "call" command, then communicate with "send" and "recieve" commands. Since NBSS uses TCP as it's base it allows for bigger messages, transmission control and loss recovery. NBT is used to transport SMB communication.
 
-> <font size=4>**NetBIOS Datagram Service**</font>
+> <font size=4>**NetBIOS Datagram Service**</font><br>
 > <font size=2>*[\#UDP/138]*</font><br><br>
 > 
 > Applications may also communicate over NetBIOS connectionless, using individual datagrams over the NetBIOS Datagram Service. The datgram services allows unicast, multicast and broadcast datagram messaging, using "group ips", an application can listen on a designated group ip to recieve a satagram sent to that group's members. This service may be used by other protocols and for sending smaller amounts of data.
@@ -626,17 +626,19 @@ Let's break it down one by one, start with the most simple.
 ## Simple Mail Transfer Protocol A.K.A SMTP
 <font size=2>*[#Layer-7] [#TCP/25]*</font><br><br>
 
-The Simple mail ransfer Protocol's job is to **mail and/or send** data to another `smtp server` on the network, similar to [Telnet](#teletype-network-aka-telnet). Smtp is used only for message forwarding, not retrieving.
+The Simple mail transfer Protocol's job is to **mail and/or send** data to another `smtp server` on the network, similar to [Telnet](#teletype-network-aka-telnet) in the way that it uses basic commands behind the scenes. Smtp is used only for message forwarding, not retrieving.
 
 ```diff
 - (In what way is it similar to telnet?)
++ Added answer.
 ```
 
 ### WHY WAS IT INVENTED?
-The smtp protocol was invented in order to provide the ability to send mail over the network.
+In 1980, Jon Postel and Suzanne Sluizer published RFC 772 which proposed the Mail Transfer Protocol as a replacement for the use of the FTP for mail.
 
 ```diff
 - (The least informative explanation I've seen)
++ More information, still short af.
 ```
 
 ### HOW DOES IT WORK?
@@ -771,39 +773,39 @@ IMAP allows the remote managment of folders called mailboxes on the mail server.
 Here is a flow-chart of how moving between states works.
 
 ```
-                   .----------------------.                     LEGEND
-                   |connection established|                     (1) connection without pre-authentication
-                   '----------------------'                     (2) pre-authenticated connection
-                              |                                 (3) rejected connection
-                              V                                 (4) successful authentication via command
-            .--------------------------------------.            (5) successful SELECT or EXAMINE command
-            |          server greeting             |            (6) CLOSE or UNSELECT command, unsolicited CLOSED response code, or failed SELECT or EXAMINE command
-            '--------------------------------------'            (7) LOGOUT command, server shutdown, or connection closed
-                      |  (1)       |  (2)        |  (3)
-                      V            |             | 
-            .-----------------.    |             | 
-            |Not Authenticated|    |             | 
-            '-----------------'    |             | 
-             |  (7)   |  (4)       |             | 
-             |        V            V             | 
-             |      .----------------.           | 
-             |      | Authenticated  |<-.        | 
-             |      '----------------'  |        | 
-             |        |  (7)   |  (5)   |  (6)   | 
-             |        |        V        |        | 
-             |        |     .--------.  |        | 
-             |        |     |Selected|--'        | 
-             |        |     '--------'           | 
-             |        |        |  (7)            | 
-             V        V        V                 V 
-            .--------------------------------------.
-            |               Logout                 |
-            '--------------------------------------'
-                              | 
-                              V 
-                .-------------------------------.
-                |both sides close the connection|
-                '-------------------------------'
+                   ┌──────────────────────┐                     LEGEND
+                   │connection established│                     (1) connection without pre-authentication
+                   └──────────────────────┘                     (2) pre-authenticated connection
+                              │                                 (3) rejected connection
+                              ▼                                 (4) successful authentication via command
+            ┌──────────────────────────────────────┐            (5) successful SELECT or EXAMINE command
+            |           server greeting            |            (6) CLOSE or UNSELECT command, unsolicited CLOSED response code, or failed SELECT or EXAMINE command
+            └──────────────────────────────────────┘            (7) LOGOUT command, server shutdown, or connection closed
+                      |  (1)       │  (2)        │  (3)
+                      ▼            │             │ 
+            ┌─────────────────┐    │             │ 
+            |Not Authenticated|    │             │ 
+            └─────────────────┘    │             │ 
+             │  (7)   │  (4)       │             │ 
+             │        ▼            ▼             │ 
+             │      ┌────────────────┐           │ 
+             │      | Authenticated  |◄─┐        │ 
+             │      └────────────────┘  │        │ 
+             │        │  (7)   │  (5)   │  (6)   │ 
+             │        │        V        │        │ 
+             │        │     ┌────────┐  │        │ 
+             │        │     |Selected|──┘        │ 
+             │        │     └────────┘           │ 
+             │        │        │  (7)            │ 
+             ▼        ▼        ▼                 ▼ 
+            ┌──────────────────────────────────────┐
+            │                Logout                │
+            └──────────────────────────────────────┘
+                               │ 
+                               ▼ 
+            ┌──────────────────────────────────────┐
+            │    both sides close the connection   │
+            └──────────────────────────────────────┘
 
 Flowchart taken from official [IMAP version 4 revision 2] rfc 9051.
 ```
@@ -1036,35 +1038,35 @@ SSL/TLS also has **two major concepts**:
 
 ```
 .               CLIENT                            SERVER
-.                 |           CLIENT HELLO          |
-.                 | ------------------------------> |
-.                 |                                 |
-.                 |           SERVER HELLO          |
-.                 |        SERVER CERTIFICATE       |
-.                 |        SERVER HELLO DONE        |
-.                 | <------------------------------ |
-Client verifies   | <------------------------------ |
-Certificate       | <------------------------------ |
-.                 |                                 |
-.                 |           KEY EXCHANGE          |
-.                 |        CHANGE CIPHER SPEC       |
-.                 |             FINISHED            |
-.                 | ------------------------------> |
-.                 | ------------------------------> |
-.                 | ------------ENCRYPTED---------> |
-.                 |                                 |
-.                 |        CHANGE CIPHER SPEC       |
-.                 |             FINISHED            |
-.                 | <------------------------------ |
-.                 | <-----------ENCRYPTED---------- |
-.                 |                                 |
-.                 |             APP DATA            |
-.                 | ------------ENCRYPTED---------> |
-.                 |                                 |
-.                 |             RESPONSE            |
-.                 | <-----------ENCRYPTED---------- |
-.                 |                                 |
-.                 V                                 V
+.                 │           CLIENT HELLO          │
+.                 │ ──────────────────────────────> │
+.                 │                                 │
+.                 │          SERVER  HELLO          │
+.                 │       SERVER  CERTIFICATE       │
+.                 │        SERVER HELLO DONE        │
+.                 │ <────────────────────────────── │
+Client verifies   │ <────────────────────────────── │
+Certificate       │ <────────────────────────────── │
+.                 │                                 │
+.                 │          KEY  EXCHANGE          │
+.                 │       CHANGE  CIPHER SPEC       │
+.                 │            FINISHED             │
+.                 │ ──────────────────────────────> │
+.                 │ ──────────────────────────────> │
+.                 │ ───────────ENCRYPTED──────────> │
+.                 │                                 │
+.                 │       CHANGE  CIPHER SPEC       │
+.                 │             FINISHED            │
+.                 │ <────────────────────────────── │
+.                 │ <───────────ENCRYPTED────────── │
+.                 │                                 │
+.                 │            APP  DATA            │
+.                 │ ───────────ENCRYPTED──────────> │
+.                 │                                 │
+.                 │             RESPONSE            │
+.                 │ <───────────ENCRYPTED────────── │
+.                 │                                 │
+.                 ▼                                 ▼
 ``` 
 A basic diagram showing the flow of a handshake. there may be more messages then this, but this is the bare-necessity.
 
@@ -1076,26 +1078,26 @@ This protocol is the simplest of the sub-protocols, it is made up of a single by
 TLS saw a big revision in the handshake process, one that made it way less viable for attacks, quicker and kept `Perfect Forward Secrecy`.
 
 Here's an overview of it.
-```
+```┌─┐│└─┘▼◄
 .               CLIENT                            SERVER
-.                 |           CLIENT HELLO          |
-.                 | ------------------------------> |
-.                 |                                 |
-.                 |           SERVER HELLO          |
-.                 | <------------------------------ |
-.                 |                                 |
-.                 |        SERVER CERTIFICATE       |
-.                 |             FINISHED            |
-.                 | <-----------ENCRYPTED---------- |
-.           1 RTT | <-----------ENCRYPTED---------- |
-.                 |                                 |
-.                 |        FINISHED + APP DATA      |
-.                 | ------------ENCRYPTED---------> |
-.                 |                                 |
-.                 |             RESPONSE            |
-.                 | <-----------ENCRYPTED---------- |
-.                 |                                 |
-.                 V                                 V
+.                 │           CLIENT HELLO          │
+.                 │ ──────────────────────────────> │
+.                 │                                 │
+.                 │           SERVER HELLO          │
+.                 │ <────────────────────────────── │
+.                 │                                 │
+.                 │        SERVER CERTIFICATE       │
+.                 │             FINISHED            │
+.                 │ <───────────ENCRYPTED────────── │
+.           1 RTT │ <───────────ENCRYPTED────────── │
+.                 │                                 │
+.                 │        FINISHED + APP DATA      │
+.                 │ ───────────ENCRYPTED──────────> │
+.                 │                                 │
+.                 │             RESPONSE            │
+.                 │ <───────────ENCRYPTED────────── │
+.                 │                                 │
+.                 ▼                                 ▼
 ```
 
 > <font size=4>**STEP 1: CLIENT HELLO**</font>
